crates/bijux-pipelines/tests/snapshots/profiles__fastq_default_profile.snap
---
source: crates/bijux-pipelines/tests/profiles.rs
expression: "fastq_default_profile(DefaultPipelineOptions::default())"
---
{
  "id": "default",
  "description": "Default FASTQ pipeline",
  "domains": [
    "Fastq"
  ],
  "graph": [
    {
      "stage_id": "fastq.validate_pre"
    },
    {
      "stage_id": "fastq.detect_adapters"
    },
    {
      "stage_id": "fastq.trim"
    },
    {
      "stage_id": "fastq.filter"
    },
    {
      "stage_id": "fastq.stats_neutral"
    },
    {
      "stage_id": "fastq.qc_post"
    }
  ],
  "defaults": {
    "tools": {
      "fastq.correct": "rcorrector",
      "fastq.detect_adapters": "fastqc",
      "fastq.filter": "fastp",
      "fastq.merge": "vsearch",
      "fastq.preprocess": "planner",
      "fastq.qc_post": "multiqc",
      "fastq.screen": "kraken2",
      "fastq.stats_neutral": "seqkit_stats",
      "fastq.trim": "fastp",
      "fastq.umi": "umi_tools",
      "fastq.validate_pre": "fastqvalidator_official"
    },
    "params": {
      "fastq.correct": {
        "paired_mode": "single_end",
        "q_cutoff": null,
        "threads": 1
      },
      "fastq.detect_adapters": {
        "paired_mode": "single_end",
        "sample_reads": null,
        "threads": 1
      },
      "fastq.filter": {
        "contaminant_db": null,
        "entropy_threshold": null,
        "low_complexity_threshold": null,
        "max_n": null,
        "max_n_count": null,
        "max_n_fraction": null,
        "n_policy": null,
        "paired_mode": "single_end",
        "polyx_policy": null,
        "threads": 1
      },
      "fastq.merge": {
        "merge_overlap": null,
        "min_len": null,
        "paired_mode": "single_end",
        "threads": 1
      },
      "fastq.preprocess": {
        "enable_contaminant_removal": false,
        "paired_mode": "single_end",
        "stages": [
          "fastq.validate_pre",
          "fastq.detect_adapters",
          "fastq.trim",
          "fastq.filter",
          "fastq.stats_neutral",
          "fastq.qc_post"
        ],
        "threads": 1
      },
      "fastq.qc_post": {
        "paired_mode": "single_end",
        "threads": 1
      },
      "fastq.screen": {
        "contaminant_db": null,
        "paired_mode": "single_end",
        "threads": 1
      },
      "fastq.stats_neutral": {
        "paired_mode": "single_end",
        "q_cutoff": null,
        "threads": 1
      },
      "fastq.trim": {
        "adapter_policy": "none",
        "contaminant_policy": null,
        "min_len": 0,
        "n_policy": null,
        "paired_mode": "single_end",
        "polyx_policy": null,
        "q_cutoff": null,
        "threads": 1
      },
      "fastq.umi": {
        "paired_mode": "single_end",
        "q_cutoff": null,
        "threads": 1
      },
      "fastq.validate_pre": {
        "paired_mode": "single_end",
        "q_cutoff": null,
        "threads": 1
      }
    }
  },
  "invariants_preset": null
}
