crates/bijux-pipelines/tests/snapshots/profiles__fastq_to_bam_adna_profile.snap
---
source: crates/bijux-pipelines/tests/profiles.rs
expression: fastq_to_bam_adna_profile()
---
{
  "id": "fastq-to-bam-adna",
  "description": "FASTQ preprocess → alignment placeholder → BAM QC/damage",  "input_domains": [
    "Fastq",
    "Cross"
  ],
  "output_domains": [
    "Bam"
  ],
  "stage_graph": [
    {
      "stage_id": "fastq.preprocess"
    },
    {
      "stage_id": "cross.align_stub"
    },
    {
      "stage_id": "bam.qc_pre"
    },
    {
      "stage_id": "bam.coverage"
    },
    {
      "stage_id": "bam.damage"
    }
  ],
  "defaults": {
    "tools": {
      "bam.authenticity": "authenticity",
      "bam.bias_mitigation": "angsd",
      "bam.complexity": "preseq",
      "bam.contamination": "authenticct",
      "bam.coverage": "mosdepth",
      "bam.damage": "pydamage",
      "bam.filter": "samtools",
      "bam.markdup": "gatk",
      "bam.qc_pre": "samtools",
      "bam.sex": "rxy",
      "bam.validate": "samtools",
      "cross.align_stub": "placeholder",
      "fastq.correct": "rcorrector",
      "fastq.detect_adapters": "fastqc",
      "fastq.filter": "fastp",
      "fastq.merge": "vsearch",
      "fastq.preprocess": "planner",
      "fastq.qc_post": "multiqc",
      "fastq.screen": "kraken2",
      "fastq.stats_neutral": "seqkit_stats",
      "fastq.trim": "fastp",
      "fastq.umi": "umi_tools",
      "fastq.validate_pre": "fastqvalidator_official"
    },
    "params": {
      "bam.authenticity": {
        "mode": "aggregate"
      },
      "bam.bias_mitigation": {
        "gc_bias_correction": true,
        "map_bias_correction": false
      },
      "bam.complexity": {
        "min_reads": 100000,
        "projection_points": [
          1000000,
          2000000
        ]
      },
      "bam.contamination": {
        "assumptions": null,
        "prior": null,
        "reference_panels": [],
        "scope": "both",
        "sex_specific": false
      },
      "bam.coverage": {
        "depth_thresholds": [
          1,
          3,
          5
        ],
        "regions": null
      },
      "bam.damage": {
        "pmd_threshold_3p": 0.3,
        "pmd_threshold_5p": 0.3,
        "trim_3p": 2,
        "trim_5p": 2,
        "udg_model": "non_udg"
      },
      "bam.filter": {
        "base_quality_threshold": 20,
        "exclude_flags": [],
        "include_flags": [],
        "mapq_threshold": 30,
        "min_length": 30,
        "remove_duplicates": false
      },
      "bam.markdup": {
        "duplicate_action": "mark",
        "optical_duplicates": "mark_only",
        "umi_policy": "ignore"
      },
      "bam.qc_pre": {
        "regions": null
      },
      "bam.sex": {
        "expected_sex": null,
        "method": "rxy"
      },
      "bam.validate": {
        "strict": true
      },
      "cross.align_stub": {},
      "fastq.correct": {
        "paired_mode": "paired_end",
        "q_cutoff": null,
        "threads": 1
      },
      "fastq.detect_adapters": {
        "paired_mode": "paired_end",
        "sample_reads": null,
        "threads": 1
      },
      "fastq.filter": {
        "contaminant_db": null,
        "entropy_threshold": null,
        "low_complexity_threshold": null,
        "max_n": null,
        "max_n_count": null,
        "max_n_fraction": null,
        "n_policy": null,
        "paired_mode": "paired_end",
        "polyx_policy": null,
        "threads": 1
      },
      "fastq.merge": {
        "merge_overlap": null,
        "min_len": null,
        "paired_mode": "paired_end",
        "threads": 1
      },
      "fastq.preprocess": {
        "enable_contaminant_removal": false,
        "paired_mode": "paired_end",
        "stages": [
          "fastq.validate_pre",
          "fastq.detect_adapters",
          "fastq.trim",
          "fastq.filter",
          "fastq.stats_neutral",
          "fastq.qc_post"
        ],
        "threads": 1
      },
      "fastq.qc_post": {
        "paired_mode": "paired_end",
        "threads": 1
      },
      "fastq.screen": {
        "contaminant_db": null,
        "paired_mode": "paired_end",
        "threads": 1
      },
      "fastq.stats_neutral": {
        "paired_mode": "paired_end",
        "q_cutoff": null,
        "threads": 1
      },
      "fastq.trim": {
        "adapter_policy": "none",
        "contaminant_policy": null,
        "min_len": 0,
        "n_policy": null,
        "paired_mode": "paired_end",
        "polyx_policy": null,
        "q_cutoff": null,
        "threads": 1
      },
      "fastq.umi": {
        "paired_mode": "paired_end",
        "q_cutoff": null,
        "threads": 1
      },
      "fastq.validate_pre": {
        "paired_mode": "paired_end",
        "q_cutoff": null,
        "threads": 1
      }
    }
  },
  "invariants_preset": "adna",
  "capabilities": {
    "required_inputs": [
      "fastq",
      "alignment_boundary"
    ],
    "produces_outputs": [
      "fastq",
      "bam.metrics",
      "alignment_boundary"
    ],
    "supports_benchmarks": false
  }
}
